--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.4.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.9",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
