--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.2",
+    "axios": "^1.7.9",
     "framer-motion": "^11.13.1",
+    "mongodb": "^6.11.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
