--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.13.1",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-masonry-css": "^1.0.16",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
