--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "babel-preset-next": "^1.4.0",
+    "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "^15.0.3",
     "postcss": "^8",
