--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-masonry-css": "^1.0.16",
+    "react-quill": "^2.0.0",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
