--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.2",
+    "@tiptap/react": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^11.13.1",
     "mongodb": "^6.11.0",
     "next": "15.0.3",
@@ -20,6 +23,7 @@
     "react-countup": "^6.5.3",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
